upd: Add more Russian short names

--- a/src/main/resources/data/russian-short-names.yml
+++ b/src/main/resources/data/russian-short-names.yml
@@ -1,10 +1,92 @@
+# ------------------------
+# Male names (Мужские)
+# ------------------------
 Александр: [Саша, Саня, Шура]
-Алексей: [Лёша]
-Михаил: [Миша]
-Дмитрий: [Дима]
-Екатерина: [Катя]
-Наталья: [Наташа]
+Алексей: [Лёша, Лёха]
+Анатолий: [Толя, Толян]
+Андрей: [Андрюша, Андрюха]
+Антон: [Антоша, Антоха]
+Аркадий: [Аркаша]
+Арсений: [Сеня]
+Артём: [Тёма]
+Борис: [Боря]
+Валентин: [Валя]
+Валерий: [Валера]
+Василий: [Вася]
+Виктор: [Витя]
+Виталий: [Виталик]
+Владимир: [Вова, Володя]
+Владислав: [Влад, Слава]
+Вячеслав: [Слава, Славик]
+Геннадий: [Гена]
+Георгий: [Гоша, Жора]
+Григорий: [Гриша]
+Даниил: [Даня]
+Денис: [Дениска]
+Дмитрий: [Дима, Митя]
+Евгений: [Женя, Жека]
+Егор: [Егорка]
+Иван: [Ваня]
+Игорь: [Игорёк, Гарик]
+Илья: [Илюша]
+Кирилл: [Кирюша]
+Константин: [Костя]
+Леонид: [Лёня]
+Максим: [Макс]
+Михаил: [Миша, Мишка]
+Никита: [Никитка]
+Николай: [Коля]
+Олег: [Олежка]
+Павел: [Паша]
+Пётр: [Петя]
+Роман: [Рома]
+Семён: [Сёма, Сеня]
+Сергей: [Серёжа, Серёжка]
+Станислав: [Стас]
+Тимофей: [Тима, Тимка]
+Тимур: [Тима]
+Фёдор: [Федя]
+Юрий: [Юра]
+Ярослав: [Ярик, Слава]
+
+# ------------------------
+# Female names (Женские)
+# ------------------------
+Александра: [Саша, Шура]
+Алёна: [Алёнка]
+Алина: [Алинка, Аля]
+Алиса: [Алиска, Ася]
+Алла: [Аллочка]
 Анастасия: [Настя]
-Мария: [Маша]
-Сергей: [Серёжа]
-Владимир: [Вова]
+Анна: [Аня, Анюта]
+Валентина: [Валя]
+Валерия: [Лера]
+Варвара: [Варя]
+Вероника: [Ника]
+Виктория: [Вика]
+Галина: [Галя]
+Дарья: [Даша]
+Евгения: [Женя, Жека]
+Екатерина: [Катя, Катюша]
+Елена: [Лена]
+Елизавета: [Лиза]
+Ирина: [Ира]
+Кристина: [Крис, Кристя]
+Ксения: [Ксюша]
+Лариса: [Лара]
+Любовь: [Люба]
+Людмила: [Люда, Мила]
+Маргарита: [Рита]
+Мария: [Маша, Маруся]
+Надежда: [Надя]
+Наталья: [Наташа]
+Нина: [Ниночка]
+Оксана: [Оксанка, Ксана, Сана, Оксюша]
+Ольга: [Оля]
+Полина: [Поля]
+Светлана: [Света]
+София: [Соня]
+Софья: [Соня]
+Татьяна: [Таня]
+Юлия: [Юля]
+Яна: [Яночка]
